    that may cause performance issues in case user incorrectly sets
    "update_interval" and "idle_update_interval" values.
    Default value is `10`, and should not be modified.

* Gear Widget
  - Fixed a typo in "battery_bar_color_regen" default value,
    which would not show regeneration color.

* Lap time history Widget
  - Fixed missing fuel unit conversion for gallon.

2.11.1 (2024-03-28)
-----------------------------
* Trailing Widget
  - Add "draw_order_index_*" options,
    which sets draw order of plot lines.

2.11.0 (2024-03-28)
-----------------------------
* [New]Fuel calculator
  - New "Fuel Calculator" can be accessed from Tools menu in main window.
    Editable options:
      * Lap time (minute:second:millisecond), can be auto-filled by Reload.
      * Tank capacity (liter or gallon), can be auto-filled by Reload.
      * Fuel consumption (liter or gallon), can be auto-filled by Reload.
      * Race length in minutes.
      * Race length in laps.
      * Formation/Rolling.
      * Average pit stop in seconds.
      * Starting fuel (liter or gallon).
    Output values:
      * Total required race fuel (liter or gallon).
      * End stint remaining fuel (liter or gallon).
      * Total required pit stops.
      * One less pit stop fuel consumption (liter or gallon).
      * Total laps can run based on "Total fuel" value.
      * Total minutes can run based on "Total fuel" value.
      * Average refueling (liter or gallon) per pit stop.
  - "Reload" button to load fuel usage & stint data from recent sessions
    into calculator without having to manually set values.
  - "History" table which lists "lap number", "lap time", "fuel consumption",
    "remaining fuel" data from recent sessions.
    Invalid lap time or fuel consumption data is highlighted in red.
  - Select any "lap time" or "fuel consumption" values from history table,
    and click "Add selected data" to send value to calculator.